--- a/SprintTek/angular/src/app/main/phonebook/phonebook.component.html
+++ b/SprintTek/angular/src/app/main/phonebook/phonebook.component.html
@@ -6,15 +6,102 @@
                     <h3 class="kt-subheader__title">
                         <span>{{"PhoneBook" | localize}}</span>
                     </h3>
+                    <span class="kt-subheader__separator kt-subheader__separator--v"></span>
+                    <span class="kt-subheader__desc">
+                        {{"EditTenantHeaderInfo" | localize}}
+                    </span>
+                </div>
+                <div class="kt-subheader__toolbar">
+                    <div class="kt-subheader__wrapper">
+                        <button *ngIf="'Pages.Tenant.PhoneBook.CreatePerson' | permission" class="btn btn-primary" (click)="createPersonModal.show()"><i class="fa fa-plus"></i> {{"CreateNewPerson" | localize}}</button>
+                    </div>
                 </div>
             </div>
         </div>
         <div [class]="containerClass + ' kt-grid__item kt-grid__item--fluid'">
             <div class="kt-portlet kt-portlet--mobile">
-                <div class="kt-portlet__body  kt-portlet__body--fit">
-                    <p>PHONE BOOK CONTENT COMES HERE!</p>
+                <div class="kt-portlet__body">
+                    <form autocomplete="off">
+                        <div class="kt-form">
+                            <div class="row align-items-center kt-margin-b-10">
+                                <div class="col-xl-12">
+                                    <div class="form-group align-items-center">
+                                        <div class="input-group">
+                                            <input [(ngModel)]="filter" name="filterText" autoFocus class="form-control" [placeholder]="l('SearchWithThreeDot' | localize)" type="text">
+                                            <span class="input-group-btn">
+                                                <button (click)="getPeople()" class="btn btn-primary" type="submit"><i class="flaticon-search-1"></i></button>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                    
+                    
+                    <div *ngFor="let person of people" [ngClass]="{'bg-secondary kt-padding-10': person===editingPerson}">
+                        <div class="row kt-row--no-padding align-items-center">
+                            <div class="col">
+                                <h4>{{person.name + ' ' + person.surname}}</h4>
+                                <span>{{person.emailAddress}}</span>
+                            </div>
+                            <div class="col kt-align-right">
+                                <button (click)="editPerson(person)" title="{{'Edit' | localize}}" class="btn  btn-outline-hover-primary btn-icon">
+                                    <i class="fa fa-plus"></i>
+                                </button>
+                                <button *ngIf="'Pages.Tenant.PhoneBook.EditPerson' | permission" (click)="editPersonModal.show(person.id)" title="{{'EditPerson' | localize}}" class="btn  btn-outline-hover-success btn-icon">
+                                    <i class="fa fa-pen"></i>
+                                </button>
+                                <button id="deletePerson" (click)="deletePerson(person)" title="{{'Delete' | localize}}" class="btn  btn-outline-hover-danger btn-icon" href="javascript:;">
+                                    <i class="fa fa-times"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12 kt-margin-t-20" *ngIf="person===editingPerson">
+                                <table class="table table-hover">
+                                    <thead>
+                                        <tr>
+                                            <th style="width:10%"></th>
+                                            <th style="width:15%">{{"Type" | localize}}</th>
+                                            <th style="width:75%">{{"PhoneNumber" | localize}}</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr *ngFor="let phone of person.phones">
+                                            <td>
+                                                <button *ngIf="'Pages.Tenant.PhoneBook.EditPerson' | permission" (click)="deletePhone(phone, person)" class="btn btn-outline-danger kt-btn kt-btn--icon kt-btn--icon-only kt-btn--pill">
+                                                    <i class="fa fa-times"></i>
+                                                </button>
+                                            </td>
+                                            <td>{{getPhoneTypeAsString(phone.type)}}</td>
+                                            <td>{{phone.number}}</td>
+                                        </tr>
+                                        <tr *ngIf="'Pages.Tenant.PhoneBook.EditPerson' | permission">
+                                            <td>
+                                                <button (click)="savePhone()" class="btn btn-sm btn-success">
+                                                    <i class="fa fa-save"></i>
+                                                </button>
+                                            </td>
+                                            <td>
+                                                <select name="Type" [(ngModel)]="newPhone.type"class="form-control">
+                                                    <option value="0">{{"PhoneType_Mobile" | localize}}</option>
+                                                    <option value="1">{{"PhoneType_Home" | localize}}</option>
+                                                    <option value="2">{{"PhoneType_Business" | localize}}</option>
+                                                </select>
+                                            </td>
+                                            <td><input type="text" name="number" [(ngModel)]="newPhone.number" class="form-control" /></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
+            <createPersonModal #createPersonModal (modalSave)="getPeople()"></createPersonModal>
+            <editPersonModal #editPersonModal (modalSave)="getPeople()"></editPersonModal>
         </div>
     </div>
 </div>
